--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "build": "tsc",
-    "start": "npx nodemon dist/index.js"
-  },
+"scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
