--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
-  "builds": [
+    "version": 2,
+    "builds": [
       {
-          "src": "index.js",
-          "use": "@vercel/node"
+        "src": "dist/index.js",
+        "use": "@vercel/node"
       }
-  ],
-  "routes": [
+    ],
+    "routes": [
       {
-          "src": "/api/(.*)",
-          "dest": "/api/index.js"
+        "src": "/api/(.*)",
+        "dest": "/dist/index.js"
       }
-  ]
-}
+    ]
+  }
+  
